fixed layout bug on mobile

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -9,7 +9,8 @@ p
 
 #header_outer
   background: none
-  position: static
+  position: relative
+  width: 100%
 
 #container.no_sidebar
   padding-left: 0px
